--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,56 @@ Temporary Items
 
 # debug file
 _site
+_posts/2016-01-06-ReactiveCocoa-进阶.md
+_posts/2016-10-10-iOS-手势与变形.md
+_posts/2016-10-18-Xcode-Debug-大全.md
+_posts/2016-10-26-BYPhoneNumTF.md
+_posts/2016-10-26-JSON-转模型-For-YYModel.md
+_posts/2016-11-10-Objective-C Runtime详解.md
+_posts/2016-11-15-iOS噪音计模型.md
+_posts/2016-11-18-Objective-C-Runtime-基本使用.md
+_posts/2016-11-28-Objective-C-RunLoop.md
+_posts/2016-12-01-快速添加圆角和描边.md
+_posts/2016-12-07-忽略-Xcode8-中的注释警告⚠️.md
+_posts/2016-12-13-定时器你真的会使用吗？.md
+_posts/2016-12-21-Objective-C-Category.md
+_posts/2016-12-26-ReactiveCocoa-基础.md
+_posts/2017-02-04-Hello-2017.md
+_posts/2017-02-06-快速搭建个人博客.md
+_posts/2017-02-14-随便聊聊.md
+_posts/2017-02-15-Git指令整理.md
+_posts/2017-02-15-Mac-文本转音频.md
+_posts/2017-02-16-Git-代码回滚.md
+_posts/2017-02-22-Mac-文件的隐藏与显示.md
+_posts/2017-02-22-使用-.gitignore-忽略-git-仓库中的文件.md
+_posts/2017-03-01-Xcode-控制台输出中文.md
+_posts/2017-03-06-Swift-代理模式.md
+_posts/2017-03-08-CocoaPods公有仓库的创建.md
+_posts/2017-03-10-CocoaPods私有仓库的创建.md
+_posts/2017-03-17-Mac终端(zsh)下用代码编辑器打开文件或目录.md
+_posts/2017-03-23-AsyncDisplayKit-2.0-教程：入门「译」.md
+_posts/2017-03-30-Swift 3.1-的新变化「译」.md
+_posts/2017-04-07-强化-Swift-中的-print.md
+_posts/2017-04-13-CocoaPods-安装和使用.md
+_posts/2017-04-20-iOS自动打包.md
+_posts/2017-04-28-RVM-使用指南.md
+_posts/2017-05-03-Swift-的懒加载和计算型属性.md
+_posts/2017-05-04-R.swift-的使用.md
+_posts/2017-05-05-在-Swift-中使用-IBInspectable.md
+_posts/2017-06-19-快速配置zsh.md
+_posts/2017-07-04-Xcode9-无线调试功能.md
+_posts/2017-07-10-「体能训练理论」之功能性.md
+_posts/2017-07-10-「体能训练理论」之动力链.md
+_posts/2017-07-10-「体能训练理论」之金字塔.md
+_posts/2017-07-19-Swift的HMAC和SHA1加密.md
+_posts/2017-07-24-iTunes-Connect-构建版本不显示.md
+_posts/2017-07-26-利用-Debug-Memory-Graph-检测内测泄漏.md
+_posts/2017-09-11-Swift-4-新特性.md
+_posts/2017-10-04-GCD-在-Swift-中的用法.md
+_posts/2017-12-19-为博客添加-Gitalk-评论插件.md
+_posts/2017-12-26-从一道网易面试题浅谈-Tagged-Pointer.md
+_posts/2017-2-9-Mac快速调出终端.md
+_posts/2017-3-07-文件目录树状(tree)显示.md
+_posts/2018-01-04-柔术最大的谎言「译」.md
+_posts/2018-05-05-Xcode命令行工具管理.md
+_posts/2018-06-05-5分钟带你看完-WWDC-2018.md
